/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


// This file contains protocol buffers that are used throughout the cluster -- i.e.
// by the client, server, and data transfer protocols.

option java_package = "org.apache.hadoop.hdfs.protocol.proto";
option java_outer_classname = "ClientRAMManagernodeProtocolProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.hdfs;

import "Security.proto";
import "hdfs.proto";

/**
 * message - the message to log
 */
  message LogMessageRequestProto {
      required string message = 1;
  }

/**
 * void response
 */
  message LogMessageResponseProto {
  }

/**
 * Protocol used from client to the RAMManager.
 * See the request and response for details of rpc call.
 */
service ClientRAMManagernodeProtocolService {
  /**
   * Logs a message via the RAMManager node 
   */
  rpc logMessage(LogMessageRequestProto)
      returns(LogMessageResponseProto);
}
